--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -249,8 +249,8 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Follow the Arrow!" lineBreakMode="tailTruncation" numberOfLines="0" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L9g-au-7SK">
-                                <rect key="frame" x="158" y="20" width="283.5" height="49.5"/>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="36"/>
+                                <rect key="frame" x="89" y="28" width="421.5" height="68.5"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="50"/>
                                 <color key="textColor" red="0.1764705882" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
@@ -278,7 +278,7 @@
                                         <size key="shadowOffset" width="0.0" height="0.0"/>
                                     </label>
                                     <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ox-Bz-047">
-                                        <rect key="frame" x="8" y="20.5" width="102" height="38"/>
+                                        <rect key="frame" x="8" y="20" width="102" height="38"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
                                         <state key="normal" title="Cancel Trip">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -288,7 +288,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ika-I3-0Ps">
-                                        <rect key="frame" x="497" y="20.5" width="95" height="38"/>
+                                        <rect key="frame" x="497" y="20" width="95" height="38"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
                                         <state key="normal" title="Pause Trip">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -334,7 +334,7 @@
                             <constraint firstAttribute="bottom" secondItem="oWP-zu-DEc" secondAttribute="bottom" id="BCR-Mi-BDv"/>
                             <constraint firstAttribute="centerX" secondItem="Apu-gy-1gU" secondAttribute="centerX" id="BEB-m9-2yo"/>
                             <constraint firstItem="6NJ-8o-PKJ" firstAttribute="top" secondItem="0UY-z2-D8u" secondAttribute="top" id="DYr-PH-G05"/>
-                            <constraint firstItem="L9g-au-7SK" firstAttribute="top" secondItem="6NJ-8o-PKJ" secondAttribute="bottom" id="Eag-SA-c3G"/>
+                            <constraint firstItem="L9g-au-7SK" firstAttribute="top" secondItem="6NJ-8o-PKJ" secondAttribute="bottom" constant="8" id="Eag-SA-c3G"/>
                             <constraint firstAttribute="width" secondItem="0UY-z2-D8u" secondAttribute="width" id="OiU-rc-SvW"/>
                             <constraint firstItem="0UY-z2-D8u" firstAttribute="height" secondItem="oh2-k0-mBE" secondAttribute="height" multiplier="0.1" id="Py2-98-cuu"/>
                             <constraint firstAttribute="centerY" secondItem="a5y-Az-JIc" secondAttribute="centerY" id="Sen-2o-2x5"/>
@@ -351,8 +351,9 @@
                             <constraint firstItem="Apu-gy-1gU" firstAttribute="height" secondItem="oh2-k0-mBE" secondAttribute="height" multiplier="0.09" id="nKS-E6-z27"/>
                             <constraint firstItem="0UY-z2-D8u" firstAttribute="top" secondItem="6NJ-8o-PKJ" secondAttribute="bottom" id="oa8-M3-RRs"/>
                             <constraint firstItem="oWP-zu-DEc" firstAttribute="top" secondItem="oh2-k0-mBE" secondAttribute="top" id="rgY-EY-h22"/>
+                            <constraint firstItem="L9g-au-7SK" firstAttribute="centerY" secondItem="oh2-k0-mBE" secondAttribute="centerY" constant="-238" id="v6F-wk-JLL"/>
                             <constraint firstAttribute="centerX" secondItem="jj0-pc-TNV" secondAttribute="centerX" id="wcf-MO-v9L"/>
-                            <constraint firstAttribute="centerX" secondItem="L9g-au-7SK" secondAttribute="centerX" id="xrK-tz-GdL"/>
+                            <constraint firstItem="L9g-au-7SK" firstAttribute="centerX" secondItem="oh2-k0-mBE" secondAttribute="centerX" id="xrK-tz-GdL"/>
                             <constraint firstAttribute="centerY" secondItem="jj0-pc-TNV" secondAttribute="centerY" multiplier="4" id="y0U-rw-enq"/>
                             <constraint firstItem="6tt-rI-4yn" firstAttribute="top" secondItem="Apu-gy-1gU" secondAttribute="bottom" id="yqm-eZ-zdC"/>
                         </constraints>
@@ -360,6 +361,7 @@
                             <mask key="constraints">
                                 <exclude reference="WVm-gc-znY"/>
                                 <exclude reference="oa8-M3-RRs"/>
+                                <exclude reference="Eag-SA-c3G"/>
                                 <exclude reference="Y07-3H-J3N"/>
                                 <exclude reference="9lG-ab-QAJ"/>
                                 <exclude reference="gWV-Sz-nUH"/>
@@ -376,7 +378,7 @@
                         <outlet property="cancelTripButton" destination="4ox-Bz-047" id="XEG-03-7Lb"/>
                         <outlet property="distanceLabel" destination="nwY-c2-R14" id="kKg-z1-Q3m"/>
                         <outlet property="followArrowLabel" destination="L9g-au-7SK" id="922-wS-cln"/>
-                        <outlet property="followTheArrowConstraint" destination="Eag-SA-c3G" id="RH4-gO-dwD"/>
+                        <outlet property="followTheArrowConstraint" destination="v6F-wk-JLL" id="411-ft-uDu"/>
                         <outlet property="pauseButton" destination="Ika-I3-0Ps" id="JZT-jh-ci8"/>
                         <outlet property="placeNearbyButton" destination="Apu-gy-1gU" id="KqA-J9-yoS"/>
                         <outlet property="visitButton" destination="jj0-pc-TNV" id="X1Y-Cm-0ht"/>
