--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -400,10 +400,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61F-Gk-YIg">
-                                <rect key="frame" x="0.0" y="72" width="600" height="528"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                             </webView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5H-DK-3nZ">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="You Are Here!" id="1bE-xs-Waw">
                                         <barButtonItem key="rightBarButtonItem" title="Dismiss" id="WBg-4l-2a4">
@@ -421,9 +421,15 @@
                             <constraint firstItem="61F-Gk-YIg" firstAttribute="centerX" secondItem="dww-iN-Pd8" secondAttribute="centerX" id="TB5-mP-L2E"/>
                             <constraint firstItem="61F-Gk-YIg" firstAttribute="top" secondItem="b5H-DK-3nZ" secondAttribute="bottom" id="ZSl-7H-5nN"/>
                             <constraint firstAttribute="width" secondItem="b5H-DK-3nZ" secondAttribute="width" id="qja-9V-hoJ"/>
-                            <constraint firstItem="b5H-DK-3nZ" firstAttribute="top" secondItem="aUN-q6-OgQ" secondAttribute="bottom" constant="8" id="sJh-51-UE8"/>
+                            <constraint firstItem="b5H-DK-3nZ" firstAttribute="top" secondItem="aUN-q6-OgQ" secondAttribute="top" id="sJh-51-UE8"/>
                             <constraint firstItem="2HA-vA-7Rv" firstAttribute="top" secondItem="61F-Gk-YIg" secondAttribute="bottom" id="zF7-Uv-5hf"/>
+                            <constraint firstItem="b5H-DK-3nZ" firstAttribute="top" secondItem="aUN-q6-OgQ" secondAttribute="bottom" id="zxT-Kl-Cnc"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="sJh-51-UE8"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="OgL-wg-cb1">
                         <barButtonItem key="rightBarButtonItem" title="Dismiss" id="8W9-wF-9DU">
