--- a/TrailMix WatchKit App/Base.lproj/Interface.storyboard
+++ b/TrailMix WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="7701"/>
@@ -97,7 +97,14 @@
             <objects>
                 <controller identifier="WKNaviInterfaceController" id="3dW-e1-7AQ" customClass="WKNaviInterfaceController">
                     <items>
-                        <imageView width="47" height="58" alignment="right" image="walking" contentMode="scaleAspectFit" id="27A-gd-1w5"/>
+                        <group width="1" alignment="left" id="koh-eb-jZb">
+                            <items>
+                                <imageView width="47" height="58" alignment="right" image="walking" contentMode="scaleAspectFit" id="27A-gd-1w5"/>
+                                <label width="80.5" height="48.5" alignment="left" text=" " id="oKT-cW-i86">
+                                    <fontDescription key="font" type="system" pointSize="28"/>
+                                </label>
+                            </items>
+                        </group>
                         <label width="86" height="20" alignment="left" text="Distance" id="AZC-rG-iOx">
                             <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
                         </label>
@@ -121,6 +128,7 @@
                         </items>
                     </menu>
                     <connections>
+                        <outlet property="directionLabel" destination="oKT-cW-i86" id="Lri-9t-prd"/>
                         <outlet property="distanceLabel" destination="jjh-tC-3P3" id="Wvr-Zy-vi0"/>
                         <outlet property="helperLabel" destination="f8N-3l-93V" id="qIL-KB-Sih"/>
                     </connections>
